[package]
name = "rustcask"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Stankiewicz <ryan.stankiewicz0@gmail.com>"]
description = "A Bitcask implementation in Rust: log-based key-value store"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }