[package]
name = "rustcask"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Stankiewicz <ryan.stankiewicz0@gmail.com>"]
description = "A Bitcask implementation in Rust: log-based key-value store"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
walkdir = "2.4.0"
tempfile = "3.10.0"
divan = "0.1.14"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde = {version = "1.0.197", features= ["derive"] }
bytes = "1.5.0"
rand = "0.8.5"
log = "0.4.21"
tokio = "1.38.0"

[[bench]]
name = "readwrite"
harness = false
